* demangle.h (no_demangling): New.         (NO_DEMANGLING_STYLE_STRING): New.
        * cplus-dem.c (libiberty_demanglers): Add no_demangling case.
        (cplus_demangle): Support no_demangling.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47733 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-06  Richard Henderson  <rth@redhat.com>
+
+	* cplus-dem.c (libiberty_demanglers): Add no_demangling case.
+	(cplus_demangle): Support no_demangling.
+
 2001-11-27  Zack Weinberg  <zack@codesourcery.com>
 
 	* _doprnt.c: Moved here from gcc/doprint.c.  Adjust to build
