--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-06  Richard Henderson  <rth@redhat.com>
+
+	* demangle.h (no_demangling): New.
+	(NO_DEMANGLING_STYLE_STRING): New.
+
 2001-10-24  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* include/safe-ctype.h (_sch_isbasic, IS_ISOBASIC): New.
