--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-06  Tom Tromey  <tromey@redhat.com>
+
+	* libjava.compile/BlankFinal.java: Removed; incorrect test.
+
 2001-11-02  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* libjava.lang/TLtest.xfail: New file. Needs threads.
