* builtin-types.def (BT_FN_VOID_PTR_VAR): New. 	* builtins.def (BUILT_IN_PREFETCH): Change arguments. 	* builtins.c (expand_builtin_prefetch): Two arguments are now optional, 	with defaults for read prefetch with high degree of locality. 	* doc/extend.texi (__builtin_prefetch): Update documentation. 	* doc/md.texi (prefetch): Add documentation.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47741 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2001-12-06  Janis Johnson  <janis187@us.ibm.com>
+
+	* builtin-types.def (BT_FN_VOID_PTR_VAR): New.
+	* builtins.def (BUILT_IN_PREFETCH): Change arguments.
+	* builtins.c (expand_builtin_prefetch): Two arguments are now optional,
+	with defaults for read prefetch with high degree of locality.
+	* doc/extend.texi (__builtin_prefetch): Update documentation.
+	* doc/md.texi (prefetch): Add documentation.
+
 2001-12-06  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* fixinc/inclhack.def (stdio_va_list): Handle __VA_LIST__ in Tru64
