* gcc.c-torture/execute/builtin-prefetch-1.c: Add checks for         variable argument list.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47742 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-06  Janis Johnson  <janis187@us.ibm.com>
+
+	* gcc.c-torture/execute/builtin-prefetch-1.c: Add checks for
+	variable argument list.
+
 2001-12-06  Zack Weinberg  <zack@codesourcery.com>
 
 	* gcc.c-torture/execute/memcheck: Delete entire directory.
