* verify.cc (_Jv_BytecodeVerifier::FLAG_JSR_TARGET): Removed. 	(_Jv_BytecodeVerifier::note_branch_target): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47745 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,8 @@
 2001-12-06  Tom Tromey  <tromey@redhat.com>
 
+	* verify.cc (_Jv_BytecodeVerifier::FLAG_JSR_TARGET): Removed.
+	(_Jv_BytecodeVerifier::note_branch_target): Likewise.
+
 	* verify.cc (_Jv_BytecodeVerifier::type_val): Added
 	unused_by_subroutine_type.
 	(_Jv_BytecodeVerifier::type::merge): Handle
