--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-07  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* alpha.c (function_arg): Cast value to HOST_WIDE_INT before
+	shifting.
+
 2001-12-06  Aldy Hernandez  <aldyh@redhat.com>
 
 	* rs6000.h (PRE_GCC3_DWARF_FRAME_REGISTERS): New.
