--- a/gcc/doc/install.texi
+++ b/gcc/doc/install.texi
@@ -32,6 +32,9 @@
 @ifset binarieshtml
 @settitle Installing GCC: Binaries
 @end ifset
+@ifset oldhtml
+@settitle Installing GCC: Old documentation
+@end ifset
 @ifset gfdlhtml
 @settitle Installing GCC: GNU Free Documentation License
 @end ifset
@@ -50,6 +53,7 @@
 @set testhtml
 @set finalinstallhtml
 @set binarieshtml
+@set oldhtml
 @set gfdlhtml
 @end ifnothtml
 
@@ -104,6 +108,8 @@ Free Documentation License}''.
 
 * Specific::        Host/target specific installation notes for GCC.
 * Binaries::        Where to get pre-compiled binaries.
+
+* Old::             Old installation documentation.
 
 * GNU Free Documentation License:: How you can copy and share this manual.
 * Concept Index::   This index has two entries.
@@ -183,6 +189,12 @@ we suggest that you install GCC into a directory of its own and simply
 remove that directory when you do not need that specific version of GCC
 any longer, and, if shared libraries are installed there as well, no
 more binaries exist that use them.
+
+@ifhtml
+There are also some @uref{old.html,,old installation instructions},
+which are mostly obsolete but still contain some information which has
+not yet been merged into the main part of this manual.
+@end ifhtml
 
 @html
 <hr>
@@ -1389,7 +1401,7 @@ works.
 @c ***Specific****************************************************************
 @ifnothtml
 @comment node-name,     next,          previous, up
-@node    Specific, GNU Free Documentation License, Binaries, Top
+@node    Specific, Old, Binaries, Top
 @end ifnothtml
 @ifset specifichtml
 @html
@@ -3675,6 +3687,19 @@ inlines, vtables and template instantiations will be discarded
 automatically.
 
 
+@html
+</p>
+<hr>
+<p>
+@end html
+@ifhtml
+@uref{./index.html,,Return to the GCC Installation page}
+@end ifhtml
+@end ifset
+
+@c ***Old documentation******************************************************
+@ifset oldhtml
+@include install-old.texi
 @html
 </p>
 <hr>
