* check-init.c (check_init):  Fix typo freeing memory twice.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47763 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-07  Per Bothner  <per@bothner.com>
+
+	* check-init.c (check_init):  Fix typo freeing memory twice.
+
 2001-12-05  Per Bothner  <per@bothner.com>
 
 	Restore support for static class initialization optimization.
