--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-07  Tom Tromey  <tromey@redhat.com>
+
+	* lang.c (lang_f_options): Added
+	optimize-static-class-initialization.
+	(java_decode_option): Removed special case.
+
 2001-12-07  Per Bothner  <per@bothner.com>
 
 	* check-init.c (check_init):  Fix typo freeing memory twice.
