--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-07  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* alpha.c (alpha_expand_unaligned_store,
+	alpha_expand_unaligned_store_words): Use constm1_rtx in place of
+	call to immed_double_const.
+
 2001-12-07  Aldy Hernandez  <aldyh@redhat.com>
 
 	* doc/extend.texi (Variable Attributes): Document vector_size.
