--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-07  Stephane Carrez  <Stephane.Carrez@sun.com>
+
+	* config/sparc/sparc.c (epilogue_renumber): Do not replace %fp
+	with %sp because it can cause the delayed instruction to load
+	below the stack.
+
 2001-12-07  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* alpha.c (alpha_expand_unaligned_store,
