* doc/extend.texi: Fix typo last change.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47777 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2001-12-07  Richard Henderson  <rth@redhat.com>
 
+	* doc/extend.texi: Fix typo last change.
+
 	* c-decl.c (c_language): Remove duplicate.
 
 2001-12-07  Dale Johannesen  <dalej@apple.com>
