* gcc.dg/cpp/ucs.c: Adjust expected warning for 64-bit hosts.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47784 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-07  Richard Henderson  <rth@redhat.com>
+
+	* gcc.dg/cpp/ucs.c: Adjust expected warning for 64-bit hosts.
+
 2001-12-07  Stephane Carrez  <Stephane.Carrez@sun.com>
 
 	* gcc.dg/sparc-ret.c: New file, test return corruption bug for
