Oops, this didn't get commited with final.c patch.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47789 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-08  Richard Earnshaw  <rearnsha@arm.com>
+
+	* final.c (cleanup_subreg_operands):  Use recog_data.operand_loc
+	in test for a subreg.
+
 2001-12-08  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* rtl.c (rtx_equal_p): Check for null pointers when comparing rtx
