* rtlanal.c (get_jump_table_offset): Delete unused variable.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47791 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-08  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* rtlanal.c (get_jump_table_offset): Delete unused variable.
+
 2001-12-08  Richard Earnshaw  <rearnsha@arm.com>
 
 	* arm.md (VUNSPEC_PREFETCH): Delete constant definition.
