--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2001-12-08  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* parse.y: Replace uses of the string non-terminal with STRING.
+	Don't perform string concatentaion here.
+	(string): Remove non-terminal.
+	* semantics.c (finish_asm_stmt): Don't concatenate strings here.
+
 2001-12-05  Jason Merrill  <jason@redhat.com>
 
 	* cp-lang.c (LANG_HOOKS_TREE_INLINING_START_INLINING): Define.
