--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,12 @@
 2001-12-08  Neil Booth  <neil@daikokuya.demon.co.uk>
 
+	* c-parse.in: Take string literals in assembler constructs,
+	not expressions.
+	* c-typeck.c (build_asm_stmt, simple_asm_stmt): No need to
+	check the strings are STRING_CSTs.
+
+2001-12-08  Neil Booth  <neil@daikokuya.demon.co.uk>
+
 	* c-lex.c (c_lex): Peek a token ahead for a string to concatenate,
 	using combine_strings to do the concatenation.
 	* c-parse.in: Replace uses of the string non-terminal with STRING.
