* gjavah.c (print_namelet): Clear subnamelets. 	(HANDLE_METHOD): Set `method_printed' earlier.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47801 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-08  Tom Tromey  <tromey@redhat.com>
+
+	* gjavah.c (print_namelet): Clear subnamelets.
+	(HANDLE_METHOD): Set `method_printed' earlier.
+
 2001-12-07  Tom Tromey  <tromey@redhat.com>
 
 	* lang.c (lang_f_options): Added
