--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,5 +1,8 @@
 2001-12-08  Tom Tromey  <tromey@redhat.com>
 
+	* gjavah.c (HANDLE_METHOD): Set `decompiled' before doing anything
+	else.
+
 	* gjavah.c (print_namelet): Clear subnamelets.
 	(HANDLE_METHOD): Set `method_printed' earlier.
 
