* gjavah.c (cxx_keywords): Re-sorted. 	* lex.c (cxx_keywords): Re-sorted.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47803 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,5 +1,8 @@
 2001-12-08  Tom Tromey  <tromey@redhat.com>
 
+	* gjavah.c (cxx_keywords): Re-sorted.
+	* lex.c (cxx_keywords): Re-sorted.
+
 	* gjavah.c (HANDLE_METHOD): Set `decompiled' before doing anything
 	else.
 
