* java-tree.h: Fixed typo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47805 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,5 +1,7 @@
 2001-12-08  Tom Tromey  <tromey@redhat.com>
 
+	* java-tree.h: Fixed typo.
+
 	* gjavah.c (decompile_method): Don't decompile to `return this'
 	for static methods.
 
